--- a/src/notebooks/OGER-PostprocessingSandbox.ipynb
+++ b/src/notebooks/OGER-PostprocessingSandbox.ipynb
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -646,18 +646,18 @@
        "4  Purple microbial (Photo- and chemosynthetic) m...  SAMN02228703"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "nhID = structuredDataDF.id.str.replace('BIOSAMPLE:','')\n",
-    "nhIdDF = pd.DataFrame(nhID)\n",
-    "nhOgerInput = ogerInput.merge(nhIdDF, how='inner', left_on='BiosampleId', right_on='id')\n",
-    "nhOgerInput = nhOgerInput.drop(['id'], axis = 1)\n",
+    "structDataID = structuredDataDF.id.str.replace('BIOSAMPLE:','')\n",
+    "structDataIdDF = pd.DataFrame(structDataID)\n",
+    "structDataOgerInput = ogerInput.merge(structDataIdDF, how='inner', left_on='BiosampleId', right_on='id')\n",
+    "structDataOgerInput = structDataOgerInput.drop(['id'], axis = 1)\n",
     "print('Number of rows: '+ str(len(nhOgerInput)))\n",
-    "nhOgerInput.head()"
+    "structDataOgerInput.head()"
    ]
   },
   {
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -786,16 +786,16 @@
        "4  digestive system  UBERON:0001007     S1  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "nhOgerOutput = ogerOutput.merge(nhIdDF, how='inner', left_on='BiosampleId', right_on='id')\n",
-    "nhOgerOutput = nhOgerOutput.drop(['id'], axis = 1)\n",
-    "print('Number of row: '+ str(len(nhOgerOutput)))\n",
-    "nhOgerOutput.head()"
+    "structDataOgerOutput = ogerOutput.merge(structDataIdDF, how='inner', left_on='BiosampleId', right_on='id')\n",
+    "structDataOgerOutput = structDataOgerOutput.drop(['id'], axis = 1)\n",
+    "print('Number of row: '+ str(len(structDataOgerOutput)))\n",
+    "structDataOgerOutput.head()"
    ]
   },
   {
@@ -1116,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1328,7 +1328,7 @@
        "[5 rows x 102 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1342,7 +1342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1354,9 +1354,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "ogerInput[ogerInput.BiosampleId =='SAMN00713600']"
-   ]
+   "source": []
   }
  ],
  "metadata": {
