--- a/src/notebooks/OGER-PostprocessingSandbox.ipynb
+++ b/src/notebooks/OGER-PostprocessingSandbox.ipynb
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -543,15 +543,17 @@
        "[5 rows x 97 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Get list of IDs from non-human-sample file\n",
-    "#nonHumanDF = pd.read_csv('../input/non-human-samples.tsv.gz', sep='\\t', low_memory=False)\n",
-    "structuredDataDF = pd.read_csv('../input/water-related-samples.tsv.gz', sep='\\t', low_memory=False)\n",
+    "# Get list of IDs from structured data file\n",
+    "\n",
+    "fp = '../input/water-related-samples.tsv.gz'\n",
+    "\n",
+    "structuredDataDF = pd.read_csv(fp, sep='\\t', low_memory=False)\n",
     "print('Number of rows: ', str(len(structuredDataDF)))\n",
     "structuredDataDF.head()"
    ]
@@ -560,7 +562,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Get descriptions of non-human-samples only"
+    "### Get OGER data corresponding to the ones present in structured data"
    ]
   },
   {
@@ -802,7 +804,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Form Phrases for each biosample"
+    "### Form Phrases for each biosample\n",
+    "\n",
+    "Phrase = list of all terms recognized by OGER"
    ]
   },
   {
@@ -1109,7 +1113,7 @@
     }
    ],
    "source": [
-    "# Add 'BIOSAMPLE:' to the id \n",
+    "# Add prefix 'BIOSAMPLE:' to the id \n",
     "phraseDF.BiosampleId = 'BIOSAMPLE:' + phraseDF.BiosampleId\n",
     "phraseDF.head()"
    ]
