minor edit: commented degug code

--- a/src/notebooks/OGER-PostprocessingSandbox.ipynb
+++ b/src/notebooks/OGER-PostprocessingSandbox.ipynb
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
        "4  Francisella tularensis subsp. tularensis strai...  SAMEA3138185"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -862,8 +862,8 @@
     "            print('Number of relevant rows: '+ str(len(returnDF))+ ' - '+ datetime.now().strftime(\"%d/%m/%Y %H:%M:%S\"))\n",
     "        \n",
     "        # *********** FOR DEBUG PURPOSES ONLY ****************\n",
-    "        if count == 5000:\n",
-    "            break;\n",
+    "        #if count == 5000:\n",
+    "        #    break;\n",
     "        \n",
     "    return returnDF"
    ]
