--- a/src/notebooks/OGER-EnvoPostprocessing.ipynb
+++ b/src/notebooks/OGER-EnvoPostprocessing.ipynb
@@ -946,7 +946,7 @@
     }
    ],
    "source": [
-    "# Serching for negation in a very naive fashion\n",
+    "# Searching for negation in a very naive fashion\n",
     "\n",
     "searchfor = [' not ', 'fail', 'absent', 'negative']\n",
     "test = ogerInput.where(lambda x: x.Description.str.contains('|'.join(searchfor))).dropna()\n",
@@ -2034,7 +2034,7 @@
    "source": [
     "structDataOgerOutput = ogerOutput.merge(structDataIdDF, how='inner', left_on='BiosampleId', right_on='id')\n",
     "structDataOgerOutput = structDataOgerOutput.drop(['id'], axis = 1)\n",
-    "print('Number of row: '+ str(len(structDataOgerOutput)))\n",
+    "print('Number of rows: '+ str(len(structDataOgerOutput)))\n",
     "structDataOgerOutput.head()\n"
    ]
   },
