added an additional cell for verification

--- a/src/notebooks/OGER-EnvoNCBITaxonChEBIPostprocessing.ipynb
+++ b/src/notebooks/OGER-EnvoNCBITaxonChEBIPostprocessing.ipynb
@@ -26,15 +26,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.38 s, sys: 769 ms, total: 2.15 s\n",
-      "Wall time: 44.5 s\n"
+      "CPU times: user 1.28 s, sys: 560 ms, total: 1.84 s\n",
+      "Wall time: 31.8 s\n"
      ]
     }
    ],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -57,8 +57,8 @@
      "output_type": "stream",
      "text": [
       "Total number of rows:  35616173\n",
-      "CPU times: user 56.2 s, sys: 6.15 s, total: 1min 2s\n",
-      "Wall time: 1min 57s\n"
+      "CPU times: user 57.2 s, sys: 16.9 s, total: 1min 14s\n",
+      "Wall time: 2min 8s\n"
      ]
     },
     {
@@ -168,7 +168,7 @@
        "4      Bacteria        NCBITaxon:2     S1  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,15 +276,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1min 2s, sys: 15.3 s, total: 1min 17s\n",
-      "Wall time: 1min 28s\n"
+      "CPU times: user 1min 16s, sys: 1min 43s, total: 2min 59s\n",
+      "Wall time: 3min 26s\n"
      ]
     },
     {
@@ -357,7 +357,7 @@
        "4      bacteria      Bacteria  NCBITaxon"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,6 +372,138 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>TokenizedTerm</th>\n",
+       "      <th>PreferredTerm</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CURIE</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>BFO</th>\n",
+       "      <td>347446</td>\n",
+       "      <td>347446</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CHEBI</th>\n",
+       "      <td>18266967</td>\n",
+       "      <td>18266967</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ENVO</th>\n",
+       "      <td>847919</td>\n",
+       "      <td>847919</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GO</th>\n",
+       "      <td>1245</td>\n",
+       "      <td>1245</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>IAO</th>\n",
+       "      <td>5842</td>\n",
+       "      <td>5842</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NCBITaxon</th>\n",
+       "      <td>15401325</td>\n",
+       "      <td>15401325</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>OBI</th>\n",
+       "      <td>5006</td>\n",
+       "      <td>5006</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>OBO</th>\n",
+       "      <td>416498</td>\n",
+       "      <td>416498</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>OIO</th>\n",
+       "      <td>88</td>\n",
+       "      <td>88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PO</th>\n",
+       "      <td>12596</td>\n",
+       "      <td>12596</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>RO</th>\n",
+       "      <td>107112</td>\n",
+       "      <td>107112</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>UBERON</th>\n",
+       "      <td>202221</td>\n",
+       "      <td>202221</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>WD_Entity</th>\n",
+       "      <td>1908</td>\n",
+       "      <td>1908</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           TokenizedTerm  PreferredTerm\n",
+       "CURIE                                  \n",
+       "BFO               347446         347446\n",
+       "CHEBI           18266967       18266967\n",
+       "ENVO              847919         847919\n",
+       "GO                  1245           1245\n",
+       "IAO                 5842           5842\n",
+       "NCBITaxon       15401325       15401325\n",
+       "OBI                 5006           5006\n",
+       "OBO               416498         416498\n",
+       "OIO                   88             88\n",
+       "PO                 12596          12596\n",
+       "RO                107112         107112\n",
+       "UBERON            202221         202221\n",
+       "WD_Entity           1908           1908"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "termOnto.groupby(['CURIE']).agg(len)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [
@@ -379,8 +511,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 39.3 s, sys: 1.92 s, total: 41.2 s\n",
-      "Wall time: 41.2 s\n"
+      "CPU times: user 40.2 s, sys: 2.99 s, total: 43.2 s\n",
+      "Wall time: 50.8 s\n"
      ]
     },
     {
