--- a/src/notebooks/OGER-EnvoPostprocessing.ipynb
+++ b/src/notebooks/OGER-EnvoPostprocessing.ipynb
@@ -26,15 +26,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.47 s, sys: 868 ms, total: 2.34 s\n",
-      "Wall time: 57.7 s\n"
+      "CPU times: user 1.37 s, sys: 578 ms, total: 1.95 s\n",
+      "Wall time: 42 s\n"
      ]
     }
    ],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
        "4      animal husbandry  ENVO:01001248     S1  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,15 +267,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 5.94 s, sys: 392 ms, total: 6.34 s\n",
-      "Wall time: 7.08 s\n"
+      "CPU times: user 4.49 s, sys: 410 ms, total: 4.9 s\n",
+      "Wall time: 5.73 s\n"
      ]
     },
     {
@@ -348,7 +348,7 @@
        "4   agriculture      animal husbandry       ENVO"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,6 +359,138 @@
     "termOnto.CURIE = termOnto['CURIE'].str.split(':').map(lambda x: x[0])\n",
     "termOnto.TokenizedTerm = termOnto.TokenizedTerm.str.lower()\n",
     "termOnto.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>TokenizedTerm</th>\n",
+       "      <th>PreferredTerm</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CURIE</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>BFO</th>\n",
+       "      <td>347446</td>\n",
+       "      <td>347446</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CHEBI</th>\n",
+       "      <td>170113</td>\n",
+       "      <td>170113</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ENVO</th>\n",
+       "      <td>847919</td>\n",
+       "      <td>847919</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GO</th>\n",
+       "      <td>1245</td>\n",
+       "      <td>1245</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>IAO</th>\n",
+       "      <td>4788</td>\n",
+       "      <td>4788</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NCBITaxon</th>\n",
+       "      <td>269334</td>\n",
+       "      <td>269334</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>OBI</th>\n",
+       "      <td>5006</td>\n",
+       "      <td>5006</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>OBO</th>\n",
+       "      <td>416345</td>\n",
+       "      <td>416345</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>OIO</th>\n",
+       "      <td>88</td>\n",
+       "      <td>88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PO</th>\n",
+       "      <td>12596</td>\n",
+       "      <td>12596</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>RO</th>\n",
+       "      <td>107112</td>\n",
+       "      <td>107112</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>UBERON</th>\n",
+       "      <td>202221</td>\n",
+       "      <td>202221</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>WD_Entity</th>\n",
+       "      <td>1908</td>\n",
+       "      <td>1908</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           TokenizedTerm  PreferredTerm\n",
+       "CURIE                                  \n",
+       "BFO               347446         347446\n",
+       "CHEBI             170113         170113\n",
+       "ENVO              847919         847919\n",
+       "GO                  1245           1245\n",
+       "IAO                 4788           4788\n",
+       "NCBITaxon         269334         269334\n",
+       "OBI                 5006           5006\n",
+       "OBO               416345         416345\n",
+       "OIO                   88             88\n",
+       "PO                 12596          12596\n",
+       "RO                107112         107112\n",
+       "UBERON            202221         202221\n",
+       "WD_Entity           1908           1908"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "termOnto.groupby(['CURIE']).agg(len)"
    ]
   },
   {
