--- a/src/notebooks/OGER-EnvoNCBITaxonPostprocessing.ipynb
+++ b/src/notebooks/OGER-EnvoNCBITaxonPostprocessing.ipynb
@@ -33,8 +33,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.45 s, sys: 666 ms, total: 2.12 s\n",
-      "Wall time: 44.6 s\n"
+      "CPU times: user 1.32 s, sys: 552 ms, total: 1.87 s\n",
+      "Wall time: 37.5 s\n"
      ]
     }
    ],
@@ -56,7 +56,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total number of rows:  17518791\n"
+      "Total number of rows:  17518791\n",
+      "CPU times: user 32.6 s, sys: 6.41 s, total: 39 s\n",
+      "Wall time: 1min 58s\n"
      ]
     },
     {
@@ -191,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,15 +276,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 30 s, sys: 4.16 s, total: 34.2 s\n",
-      "Wall time: 37.8 s\n"
+      "CPU times: user 34.1 s, sys: 25.6 s, total: 59.7 s\n",
+      "Wall time: 1min 5s\n"
      ]
     },
     {
@@ -355,7 +357,7 @@
        "4      bacteria      Bacteria  NCBITaxon"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,6 +368,138 @@
     "termOnto.CURIE = termOnto['CURIE'].str.split(':').map(lambda x: x[0])\n",
     "termOnto.TokenizedTerm = termOnto.TokenizedTerm.str.lower()\n",
     "termOnto.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>TokenizedTerm</th>\n",
+       "      <th>PreferredTerm</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CURIE</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>BFO</th>\n",
+       "      <td>347446</td>\n",
+       "      <td>347446</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CHEBI</th>\n",
+       "      <td>170113</td>\n",
+       "      <td>170113</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ENVO</th>\n",
+       "      <td>847919</td>\n",
+       "      <td>847919</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GO</th>\n",
+       "      <td>1245</td>\n",
+       "      <td>1245</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>IAO</th>\n",
+       "      <td>5315</td>\n",
+       "      <td>5315</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NCBITaxon</th>\n",
+       "      <td>15401325</td>\n",
+       "      <td>15401325</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>OBI</th>\n",
+       "      <td>5006</td>\n",
+       "      <td>5006</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>OBO</th>\n",
+       "      <td>416497</td>\n",
+       "      <td>416497</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>OIO</th>\n",
+       "      <td>88</td>\n",
+       "      <td>88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PO</th>\n",
+       "      <td>12596</td>\n",
+       "      <td>12596</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>RO</th>\n",
+       "      <td>107112</td>\n",
+       "      <td>107112</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>UBERON</th>\n",
+       "      <td>202221</td>\n",
+       "      <td>202221</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>WD_Entity</th>\n",
+       "      <td>1908</td>\n",
+       "      <td>1908</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           TokenizedTerm  PreferredTerm\n",
+       "CURIE                                  \n",
+       "BFO               347446         347446\n",
+       "CHEBI             170113         170113\n",
+       "ENVO              847919         847919\n",
+       "GO                  1245           1245\n",
+       "IAO                 5315           5315\n",
+       "NCBITaxon       15401325       15401325\n",
+       "OBI                 5006           5006\n",
+       "OBO               416497         416497\n",
+       "OIO                   88             88\n",
+       "PO                 12596          12596\n",
+       "RO                107112         107112\n",
+       "UBERON            202221         202221\n",
+       "WD_Entity           1908           1908"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "termOnto.groupby(['CURIE']).agg(len)"
    ]
   },
   {
