gold data analysis i-o comparison

--- a/src/notebooks/Gold database Analysis.ipynb
+++ b/src/notebooks/Gold database Analysis.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
        "6  ENVO:02000091  "
       ]
      },
-     "execution_count": 68,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
        "4  gold:Gb0101253   ENVO:00000446   ENVO:00002185  ENVO:00002985"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,16 +222,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
-    "inputOutputJoin = goldInput.merge(ogerOutput, left_on='id', right_on='Study_BiosampleId', how='right' )"
+    "inputOutputJoin = goldInput.merge(ogerOutput, left_on='id', right_on='Study_BiosampleId', how='left' )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -341,20 +341,20 @@
        "4      biolink:OntologyClass          Coal          coal  ENVO:02000091  "
       ]
      },
-     "execution_count": 78,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "inputOutputJoin = inputOutputJoin.drop(['Study_BiosampleId'], axis=1)\n",
-    "inputOutputJoin = inputOutputJoin.drop_duplicates()\n",
+    "#inputOutputJoin = inputOutputJoin.drop_duplicates()\n",
     "inputOutputJoin.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,12 +371,12 @@
     "                                      'CURIE == env_local_scale' and \\\n",
     "                                      'CURIE == env_medium')\n",
     "\n",
-    "filteredMatch = filteredMatch.drop_duplicates()"
+    "#filteredMatch = filteredMatch.drop_duplicates()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +486,7 @@
        "1463  biolink:OntologyClass  marine sediment  marine sediment  ENVO:03000033  "
       ]
      },
-     "execution_count": 81,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,11 +497,390 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "filteredMatch.to_csv(outputDir+'filteredMatch.tsv', sep='\\t', index=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "197723"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(inputOutputJoin)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>env_broad_scale</th>\n",
+       "      <th>env_local_scale</th>\n",
+       "      <th>env_medium</th>\n",
+       "      <th>category</th>\n",
+       "      <th>TokenizedTerm</th>\n",
+       "      <th>PreferredTerm</th>\n",
+       "      <th>CURIE</th>\n",
+       "      <th>env_broad_matched</th>\n",
+       "      <th>env_local_matched</th>\n",
+       "      <th>env_medium_matched</th>\n",
+       "      <th>false_positives</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>gold:Gb0101224</td>\n",
+       "      <td>ENVO:00002030</td>\n",
+       "      <td>ENVO:00002169</td>\n",
+       "      <td>ENVO:00005792</td>\n",
+       "      <td>biolink:OntologyClass</td>\n",
+       "      <td>Coal</td>\n",
+       "      <td>coal</td>\n",
+       "      <td>ENVO:02000091</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>gold:Gb0101224</td>\n",
+       "      <td>ENVO:00002030</td>\n",
+       "      <td>ENVO:00002169</td>\n",
+       "      <td>ENVO:00005792</td>\n",
+       "      <td>biolink:OntologyClass</td>\n",
+       "      <td>Coal Mine</td>\n",
+       "      <td>coal mine</td>\n",
+       "      <td>ENVO:00002169</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>gold:Gb0101224</td>\n",
+       "      <td>ENVO:00002030</td>\n",
+       "      <td>ENVO:00002169</td>\n",
+       "      <td>ENVO:00005792</td>\n",
+       "      <td>biolink:ChemicalSubstance</td>\n",
+       "      <td>water</td>\n",
+       "      <td>water</td>\n",
+       "      <td>CHEBI:15377</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>gold:Gb0101224</td>\n",
+       "      <td>ENVO:00002030</td>\n",
+       "      <td>ENVO:00002169</td>\n",
+       "      <td>ENVO:00005792</td>\n",
+       "      <td>biolink:OntologyClass</td>\n",
+       "      <td>water</td>\n",
+       "      <td>liquid water</td>\n",
+       "      <td>ENVO:00002006</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>gold:Gb0101225</td>\n",
+       "      <td>ENVO:00002030</td>\n",
+       "      <td>ENVO:00002169</td>\n",
+       "      <td>ENVO:00005792</td>\n",
+       "      <td>biolink:OntologyClass</td>\n",
+       "      <td>Coal</td>\n",
+       "      <td>coal</td>\n",
+       "      <td>ENVO:02000091</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               id env_broad_scale env_local_scale     env_medium  \\\n",
+       "0  gold:Gb0101224   ENVO:00002030   ENVO:00002169  ENVO:00005792   \n",
+       "1  gold:Gb0101224   ENVO:00002030   ENVO:00002169  ENVO:00005792   \n",
+       "2  gold:Gb0101224   ENVO:00002030   ENVO:00002169  ENVO:00005792   \n",
+       "3  gold:Gb0101224   ENVO:00002030   ENVO:00002169  ENVO:00005792   \n",
+       "4  gold:Gb0101225   ENVO:00002030   ENVO:00002169  ENVO:00005792   \n",
+       "\n",
+       "                    category TokenizedTerm PreferredTerm          CURIE  \\\n",
+       "0      biolink:OntologyClass          Coal          coal  ENVO:02000091   \n",
+       "1      biolink:OntologyClass     Coal Mine     coal mine  ENVO:00002169   \n",
+       "2  biolink:ChemicalSubstance         water         water    CHEBI:15377   \n",
+       "3      biolink:OntologyClass         water  liquid water  ENVO:00002006   \n",
+       "4      biolink:OntologyClass          Coal          coal  ENVO:02000091   \n",
+       "\n",
+       "   env_broad_matched  env_local_matched  env_medium_matched  false_positives  \n",
+       "0              False              False               False             True  \n",
+       "1              False               True               False            False  \n",
+       "2              False              False               False             True  \n",
+       "3              False              False               False             True  \n",
+       "4              False              False               False             True  "
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# env_{local,medium,broad}_matched\n",
+    "inputOutputJoin['env_broad_matched'] = inputOutputJoin['CURIE'] == inputOutputJoin['env_broad_scale']\n",
+    "inputOutputJoin['env_local_matched'] = inputOutputJoin['CURIE'] == inputOutputJoin['env_local_scale']\n",
+    "inputOutputJoin['env_medium_matched'] = inputOutputJoin['CURIE'] == inputOutputJoin['env_medium']\n",
+    "inputOutputJoin['false_positives'] = (inputOutputJoin.iloc[:,-3:]==False).all(True)\n",
+    "\n",
+    "inputOutputJoin.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grpList = ['id', 'env_broad_scale', 'env_local_scale', 'env_medium', 'category', 'TokenizedTerm', 'PreferredTerm', 'CURIE']\n",
+    "\n",
+    "collapsedIO  = inputOutputJoin.groupby(grpList).any()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>env_broad_matched</th>\n",
+       "      <th>env_local_matched</th>\n",
+       "      <th>env_medium_matched</th>\n",
+       "      <th>false_positives</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>id</th>\n",
+       "      <th>env_broad_scale</th>\n",
+       "      <th>env_local_scale</th>\n",
+       "      <th>env_medium</th>\n",
+       "      <th>category</th>\n",
+       "      <th>TokenizedTerm</th>\n",
+       "      <th>PreferredTerm</th>\n",
+       "      <th>CURIE</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">gold:Gb0050971</th>\n",
+       "      <th rowspan=\"2\" valign=\"top\">ENVO:00000446</th>\n",
+       "      <th rowspan=\"2\" valign=\"top\">ENVO:01001785</th>\n",
+       "      <th rowspan=\"2\" valign=\"top\">ENVO:00001998</th>\n",
+       "      <th rowspan=\"2\" valign=\"top\">biolink:OntologyClass</th>\n",
+       "      <th>Soil</th>\n",
+       "      <th>soil</th>\n",
+       "      <th>ENVO:00001998</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ecosystem</th>\n",
+       "      <th>ecosystem</th>\n",
+       "      <th>ENVO:01001110</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">gold:Gb0050972</th>\n",
+       "      <th rowspan=\"2\" valign=\"top\">ENVO:00000446</th>\n",
+       "      <th rowspan=\"2\" valign=\"top\">ENVO:01001785</th>\n",
+       "      <th rowspan=\"2\" valign=\"top\">ENVO:00001998</th>\n",
+       "      <th rowspan=\"2\" valign=\"top\">biolink:OntologyClass</th>\n",
+       "      <th>Soil</th>\n",
+       "      <th>soil</th>\n",
+       "      <th>ENVO:00001998</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ecosystem</th>\n",
+       "      <th>ecosystem</th>\n",
+       "      <th>ENVO:01001110</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>gold:Gb0050973</th>\n",
+       "      <th>ENVO:00000446</th>\n",
+       "      <th>ENVO:01001785</th>\n",
+       "      <th>ENVO:00001998</th>\n",
+       "      <th>biolink:OntologyClass</th>\n",
+       "      <th>Soil</th>\n",
+       "      <th>soil</th>\n",
+       "      <th>ENVO:00001998</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                                                                                              env_broad_matched  \\\n",
+       "id             env_broad_scale env_local_scale env_medium    category              TokenizedTerm PreferredTerm CURIE                              \n",
+       "gold:Gb0050971 ENVO:00000446   ENVO:01001785   ENVO:00001998 biolink:OntologyClass Soil          soil          ENVO:00001998              False   \n",
+       "                                                                                   ecosystem     ecosystem     ENVO:01001110              False   \n",
+       "gold:Gb0050972 ENVO:00000446   ENVO:01001785   ENVO:00001998 biolink:OntologyClass Soil          soil          ENVO:00001998              False   \n",
+       "                                                                                   ecosystem     ecosystem     ENVO:01001110              False   \n",
+       "gold:Gb0050973 ENVO:00000446   ENVO:01001785   ENVO:00001998 biolink:OntologyClass Soil          soil          ENVO:00001998              False   \n",
+       "\n",
+       "                                                                                                                              env_local_matched  \\\n",
+       "id             env_broad_scale env_local_scale env_medium    category              TokenizedTerm PreferredTerm CURIE                              \n",
+       "gold:Gb0050971 ENVO:00000446   ENVO:01001785   ENVO:00001998 biolink:OntologyClass Soil          soil          ENVO:00001998              False   \n",
+       "                                                                                   ecosystem     ecosystem     ENVO:01001110              False   \n",
+       "gold:Gb0050972 ENVO:00000446   ENVO:01001785   ENVO:00001998 biolink:OntologyClass Soil          soil          ENVO:00001998              False   \n",
+       "                                                                                   ecosystem     ecosystem     ENVO:01001110              False   \n",
+       "gold:Gb0050973 ENVO:00000446   ENVO:01001785   ENVO:00001998 biolink:OntologyClass Soil          soil          ENVO:00001998              False   \n",
+       "\n",
+       "                                                                                                                              env_medium_matched  \\\n",
+       "id             env_broad_scale env_local_scale env_medium    category              TokenizedTerm PreferredTerm CURIE                               \n",
+       "gold:Gb0050971 ENVO:00000446   ENVO:01001785   ENVO:00001998 biolink:OntologyClass Soil          soil          ENVO:00001998                True   \n",
+       "                                                                                   ecosystem     ecosystem     ENVO:01001110               False   \n",
+       "gold:Gb0050972 ENVO:00000446   ENVO:01001785   ENVO:00001998 biolink:OntologyClass Soil          soil          ENVO:00001998                True   \n",
+       "                                                                                   ecosystem     ecosystem     ENVO:01001110               False   \n",
+       "gold:Gb0050973 ENVO:00000446   ENVO:01001785   ENVO:00001998 biolink:OntologyClass Soil          soil          ENVO:00001998                True   \n",
+       "\n",
+       "                                                                                                                              false_positives  \n",
+       "id             env_broad_scale env_local_scale env_medium    category              TokenizedTerm PreferredTerm CURIE                           \n",
+       "gold:Gb0050971 ENVO:00000446   ENVO:01001785   ENVO:00001998 biolink:OntologyClass Soil          soil          ENVO:00001998            False  \n",
+       "                                                                                   ecosystem     ecosystem     ENVO:01001110             True  \n",
+       "gold:Gb0050972 ENVO:00000446   ENVO:01001785   ENVO:00001998 biolink:OntologyClass Soil          soil          ENVO:00001998            False  \n",
+       "                                                                                   ecosystem     ecosystem     ENVO:01001110             True  \n",
+       "gold:Gb0050973 ENVO:00000446   ENVO:01001785   ENVO:00001998 biolink:OntologyClass Soil          soil          ENVO:00001998            False  "
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "collapsedIO.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "collapsedIO.to_csv(outputDir+'inputOutputComparison.tsv', sep='\\t')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "169263"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(collapsedIO)"
    ]
   },
   {
