undo changes made for testing

--- a/src/notebooks/build-non-human-samples.ipynb
+++ b/src/notebooks/build-non-human-samples.ipynb
@@ -195,8 +195,7 @@
     }
    ],
    "source": [
-    "# df = pds.read_parquet('../../target/harmonized-table.parquet.gz')\n",
-    "df = pds.read_csv('../../target/non-human-samples.tsv', sep='\\t')"
+    "df = pds.read_parquet('../../target/harmonized-table.parquet.gz')"
    ]
   },
   {
@@ -951,16 +950,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# sliceDf.to_csv('../../target/non-human-samples.tsv.gz', sep='\\t', compression='gzip', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sliceDf.to_csv('non-human-samples.tsv', sep='\\t', index=False)"
+    "sliceDf.to_csv('../../target/non-human-samples.tsv.gz', sep='\\t', compression='gzip', index=False)"
    ]
   }
  ],
