--- a/src/notebooks/Gold database Analysis.ipynb
+++ b/src/notebooks/Gold database Analysis.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
        "6  ENVO:02000091  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +120,7 @@
    "source": [
     "outputDir = '../../nlp/data/nlp/output/'\n",
     "outFile = 'nlpGOLDOutput.tsv'\n",
-    "inputDir = '../../nlp/data/input/'\n",
+    "inputDir = '../../nlp/data/nlp/input/'\n",
     "inFile = 'biosamples-expanded.tsv'\n",
     "#cols = ['BiosampleId', 'Biolink', 'BeginTerm', 'EndTerm', 'TokenizedTerm', 'PreferredTerm', 'CURIE', 'NaN1', 'S-Type', 'NaN2', 'UMLS_CUI']\n",
     "ogerOutput = pd.read_csv(outputDir+outFile, sep='\\t' )\n",
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
        "4  gold:Gb0101253   ENVO:00000446   ENVO:00002185  ENVO:00002985"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
        "4      biolink:OntologyClass          Coal          coal  ENVO:02000091  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +486,7 @@
        "1463  biolink:OntologyClass  marine sediment  marine sediment  ENVO:03000033  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +515,7 @@
        "197723"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +578,7 @@
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>False</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -608,7 +608,7 @@
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>False</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -623,7 +623,7 @@
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>False</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -638,7 +638,7 @@
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>False</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -660,14 +660,14 @@
        "4      biolink:OntologyClass          Coal          coal  ENVO:02000091   \n",
        "\n",
        "   env_broad_matched  env_local_matched  env_medium_matched  false_positives  \n",
-       "0              False              False               False            False  \n",
+       "0              False              False               False             True  \n",
        "1              False               True               False            False  \n",
-       "2              False              False               False            False  \n",
-       "3              False              False               False            False  \n",
-       "4              False              False               False            False  "
+       "2              False              False               False             True  \n",
+       "3              False              False               False             True  \n",
+       "4              False              False               False             True  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -768,7 +768,7 @@
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>False</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"2\" valign=\"top\">gold:Gb0050972</th>\n",
@@ -791,7 +791,7 @@
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>False</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>gold:Gb0050973</th>\n",
@@ -839,13 +839,13 @@
        "                                                                                                                              false_positives  \n",
        "id             env_broad_scale env_local_scale env_medium    category              TokenizedTerm PreferredTerm CURIE                           \n",
        "gold:Gb0050971 ENVO:00000446   ENVO:01001785   ENVO:00001998 biolink:OntologyClass Soil          soil          ENVO:00001998            False  \n",
-       "                                                                                   ecosystem     ecosystem     ENVO:01001110            False  \n",
+       "                                                                                   ecosystem     ecosystem     ENVO:01001110             True  \n",
        "gold:Gb0050972 ENVO:00000446   ENVO:01001785   ENVO:00001998 biolink:OntologyClass Soil          soil          ENVO:00001998            False  \n",
-       "                                                                                   ecosystem     ecosystem     ENVO:01001110            False  \n",
+       "                                                                                   ecosystem     ecosystem     ENVO:01001110             True  \n",
        "gold:Gb0050973 ENVO:00000446   ENVO:01001785   ENVO:00001998 biolink:OntologyClass Soil          soil          ENVO:00001998            False  "
       ]
      },
-     "execution_count": 60,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -856,16 +856,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "collapsedIO.to_csv(outputDir+'inputOutputComparison.tsv', sep='\\t', index=None)"
+    "collapsedIO.to_csv(outputDir+'inputOutputComparison.tsv', sep='\\t')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -874,7 +874,7 @@
        "169263"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -885,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1026,7 +1026,7 @@
        "4              False              False                True            False  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1038,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1048,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1121,7 +1121,7 @@
        "8  gold:Gb0050975    CHEBI:37527             True"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1132,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1141,7 +1141,7 @@
        "146328"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1152,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1218,7 +1218,7 @@
        "gold:Gb0050975  CHEBI:37527,ENVO:00001996,ENVO:00000083,ENVO:0..."
       ]
      },
-     "execution_count": 98,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1230,16 +1230,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "consolidatedFalseCURIEs.to_csv(outputDir+'falsePositives.tsv', sep='\\t', index=None)"
+    "consolidatedFalseCURIEs.to_csv(outputDir+'falsePositivesGroupedById.tsv', sep='\\t')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1319,20 +1319,20 @@
        "4             True  "
       ]
      },
-     "execution_count": 100,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "falsePositives = pd.read_csv(outputDir+'falsePositives.tsv', sep='\\t', low_memory=False)\n",
+    "falsePositives = pd.read_csv(outputDir+'falsePositivesGroupedById.tsv', sep='\\t', low_memory=False)\n",
     "falsePositives['false_positives'] = True\n",
     "falsePositives.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1341,7 +1341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
